[tool.poetry]
name = "signal"
version = "0.1.0"
description = ""
authors = ["Moritz Makowski <moritz@dostuffthatmatters.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.9"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.2"
mypy = "^1.4.0"

[tool.mypy]
strict = true
implicit_reexport = true
no_warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

